# microdata-tools

./: .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  README.md  SECURITY.md  azure-pipelines.yml  backstage.yaml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: docs-deploy.yml  pr-test.yaml  test-and-publish.yaml
USAGE/: index.html
docs/: README.md  USAGE.md  index.md  metadata-model.md
docs/examples/BEFOLKNING_BOSTED/: BEFOLKNING_BOSTED.json
docs/examples/BEFOLKNING_INNTEKT/: BEFOLKNING_INNTEKT.csv  BEFOLKNING_INNTEKT.json
docs/examples/BEFOLKNING_KJOENN/: BEFOLKNING_KJOENN.json
docs/examples/BEFOLKNING_SIVILSTAND/: BEFOLKNING_SIVILSTAND.json
docs/issue_templates/: issue_template_en.md  issue_template_no.md
error_logs/: error_db_or_disk_full.txt  oom_new.txt
examples/BEFOLKNING_BOSTED/: BEFOLKNING_BOSTED.csv  BEFOLKNING_BOSTED.json
examples/BEFOLKNING_INNTEKT/: BEFOLKNING_INNTEKT.csv
examples/BEFOLKNING_KJOENN/: BEFOLKNING_KJOENN.csv  BEFOLKNING_KJOENN.json
examples/BEFOLKNING_SIVILSTAND/: BEFOLKNING_SIVILSTAND.csv
issue_templates/issue_template_en/: index.html
issue_templates/issue_template_no/: index.html
metadata-model/: index.html
microdata_tools/: __init__.py  _decrypt.py  _encrypt.py  _utils.py  exceptions.py  package_dataset.py  unpackage_dataset.py
microdata_tools/exceptions/: __init__.py
microdata_tools/keys/: __init__.py
microdata_tools/packaging/: __init__.py  _crypto_config.py  _decrypt.py  _encrypt.py  _utils.py  keys.py
microdata_tools/packaging/exceptions/: __init__.py
microdata_tools/validation/: __init__.py
microdata_tools/validation/adapter/: local_storage.py
microdata_tools/validation/components/: temporal_attributes.py  unit_id_types.py
microdata_tools/validation/exceptions/: __init__.py
microdata_tools/validation/model/: __init__.py  metadata.py
mise-tasks/: format
perfnotes/: perfnotes1.txt  perfnotes2.txt
report/: oom.md
scripts/: find_oom.sh  focus_once.sh  focus_watch.sh  init.sh  perf_info.py  perf_old.sh  perf_once.sh  perf_watch.sh  test_once.sh  test_watch.sh  viz.sh  viz_watch.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  log_setup.py  test_data.py  test_package_dataset.py  test_unpackage_dataset.py
tests/test_keys/: test_keys.py
tests/test_packaging/: test_keys.py  test_package_dataset.py  test_unpackage_dataset.py  test_utils.py
tests/test_validation/: test_get_unit_id_type_for_unit_type.py  test_make_big_parquet_file.py  test_parse_mem_usage.py  test_sqlite_pagination.py  test_validate_big_datasets.py  test_validate_big_datasets_old.py  test_validate_dataset.py  test_validate_dataset_name.py  test_validate_metadata.py
(+138 files in other folders)
