[tool.poetry]
name = "microdata-tools"
version = "1.7.1"
description = "Tools for the microdata.no platform"
authors = ["microdata-developers"]
license = "MIT License"
readme = "README.md"
packages = [{include = "microdata_tools"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.0"
cryptography = [
    { version = "^43.0.0", python = "<=3.10" },
    { version = "^44.0.0", python = ">3.10" }
]
pydantic = "^2.10"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py312"

