[project]
name = "microdata-tools"
version = "1.10.0"
description = "Tools for the microdata.no platform"
authors = [{ name = "microdata-developers" }]
license = { text = "MIT" }   
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "cryptography>=43.0.0,<44.0.0; python_version <= '3.10'",
    "cryptography>=44.0.0; python_version > '3.10'",
    "numpy>=2.0,<2.1; python_version == '3.9'",
    "numpy>=2.2.0; python_version >= '3.10'",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 80
target-version = "py313"
