[project]
name = "microdata-tools"
version = "1.10.1"
description = "Tools for the microdata.no platform"
authors = [{ name = "microdata-developers" }]
license = { text = "MIT" }   
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "cryptography>=43.0.0,<44.0.0; python_version <= '3.10'",
    "cryptography>=44.0.0; python_version > '3.10'",
    "numpy>=2.0,<2.1; python_version == '3.9'",
    "numpy>=2.2.0; python_version >= '3.10'",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.uv]
package = true
required-version = ">=0.7.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
target-version = "py313"
lint.select = [
    "F",   # Pyflakes errors (including unused imports, undefined names)
    "T",   # flake8-type-checking (imports used only for typing)
    "E",   # pycodestyle errors (style errors)
    "W",   # pycodestyle warnings
    "I",   # isort import ordering
    "ANN", # type annotation related rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "T201"]

[tool.setuptools.packages.find]
include = ["microdata_tools", "tests"]